infrastructure/vpc.yaml
AWSTemplateFormatVersion: '2010-09-09'

Parameters:
  # SSHを許可するIP
  MyIP:
    Description: My IP
    Type:  String

Resources:
  MojiChatVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      Tags:
      - Key: Name
        Value: MojiChatVPC

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: MojiChatVPC-IGW

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MojiChatVPC
      InternetGatewayId: !Ref InternetGateway

  FrontendRouteTable:
    Type: AWS::EC2::RouteTable
    DependsOn: AttachGateway
    Properties:
      VpcId: !Ref MojiChatVPC
      Tags:
      - Key: Name
        Value: MojiChatVPC-FrontendRoute

  FrontendRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref FrontendRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  FrontendSubnet:
    Type: AWS::EC2::Subnet
    DependsOn: AttachGateway
    Properties:
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: 'true'
      VpcId: !Ref MojiChatVPC
      Tags:
      - Key: Name
        Value: MojiChatVPC-FrontendSubnet
      - Key: Network
        Value: public

  FrontendSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref FrontendSubnet
      RouteTableId: !Ref FrontendRouteTable
  
  SubnetPrivate:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: ap-northeast-1a
      VpcId: !Ref MojiChatVPC
      Tags:
        - Key: Network
          Value: private
        - Key: Name
          Value: MojiChatVPC-SubnetPrivate

  MojiChatSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: MojiChatSG
      VpcId: !Ref MojiChatVPC
      Tags:
        - Key: 'Name'
          Value: 'MojiChatSG'
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: !Ref MyIP
